# git_operations

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  VERSION  prproject.toml  pyproject.toml
docs/: benchmark_results.md
docs/diagrams/: architecture.puml
new_capability/: improved_commit_message.md
src/gitops_summary/: __init__.py  __main__.py  bedrock.py  benchmark.py  cli.py  commit.py  config.py  default_scores.json  diagram_prompts.py  diagrams.py  docs.py  engine.py  epic.py  git_ops.py  model.py  plantuml.py  prompts.py  repo_context.py  ui.py  weekly.py
src/gitops_summary/workflows/: __init__.py
tests/: test_commit_prompts.py
