[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitops-summary"
version = "1.0.0"
description = "AI-assisted git summaries and GitLab epic operations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.28",
  "python-gitlab>=4.0",
]

[project.scripts]
gitops-summary = "gitops_summary.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
