[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitops-summary"
version = "1.0.0"
description = "AI-assisted git summaries and GitLab epic operations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.28",
  "python-gitlab>=4.0",
]

[project.scripts]
gitops-summary = "gitops_summary.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 160
target-version = ["py310"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 160
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.flake8]
max-line-length = 160
extend-ignore = ["E203", "W503"]
